[package]
name = "minecraft_end_generation"
version = "0.1.2"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description="The minecraft end generation implemented in rust"
categories=["algorithms","data-structures"]
license="MIT"

[dependencies]
java_random = "0.1.3"
sha2 = "0.9.1"
intmap = "0.7.0"
noise_rs = "0.1.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false


[[bin]]
name="temp"
path="src/bin.rs"