[package]
name = "minecraft_end_generation"
version = "0.3.1"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description = "The minecraft end generation implemented in rust"
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
java_random = { version = "0.1.7", default-features = false }
intmap = "0.7.0"
noise_rs = { version = "0.1.15", default-features = false }

[features]
default = ["const_fn"]
const_fn = ["java_random/const_fn", "noise_rs/const_fn"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cbindgen = "0.17.0"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "example"
path = "src/bin.rs"

[lib]
name = "minecraft_end_gen_rs"
crate-type = ["cdylib", "rlib"] # cdylib to make the shared library and rlib to link against bin.rs